fix game on mobile

--- a/index.css
+++ b/index.css
@@ -27,7 +27,8 @@
 }
 
 html,
-body {
+body,
+#root {
   height: 100%;
   overflow: hidden;
   overscroll-behavior: none;
